Add placeholder landing page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-<h1>Hello, world!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ring & Receipts</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 2rem;
+      background-color: #f7f7f7;
+      color: #333;
+      text-align: center;
+    }
+    .container {
+      max-width: 700px;
+      margin: 0 auto;
+    }
+    ul {
+      list-style: disc;
+      padding-left: 1.25rem;
+      text-align: left;
+      display: inline-block;
+    }
+    a {
+      color: #0366d6;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Ring & Receipts</h1>
+    <p>Your partner in event planning and financial organization.</p>
+    <p>Our services include:</p>
+    <ul>
+      <li>Event planning and coordination</li>
+      <li>Vendor and receipt management</li>
+      <li>Budget tracking and reporting</li>
+    </ul>
+    <p>Reach out to <a href="mailto:hello@ringandreceipts.cc">hello@ringandreceipts.cc</a> for more information.</p>
+  </div>
+</body>
+</html>
