--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <!-- ABOUT -->
   <section class="max-w-4xl mx-auto py-16 px-6 flex flex-col md:flex-row items-center gap-8">
     <img
-      src="https://ringandreceipts.github.io/image.png"
+      src="https://ringandreceipts.cc/image.png"
       alt="Cameron portrait"
       class="w-32 h-32 md:w-56 md:h-56 rounded-full shadow-lg object-cover"
 />
