--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
   <body class="bg-gray-50 text-gray-800 font-sans">
     <!-- HERO -->
     <section class="bg-gradient-to-r from-indigo-600 to-purple-600 text-white py-24 px-6 flex flex-col items-center text-center gap-6">
-      <!-- Logo inside soft circle -->
       <div class="inline-flex items-center justify-center rounded-full bg-white/25 p-5 backdrop-blur-sm">
         <img src="https://ringandreceipts.cc/ring_receipts_logo_conceptB.png" alt="Ring & Receipts logo" class="h-20 w-20 md:h-24 md:w-24" />
       </div>
-
       <h1 class="text-4xl md:text-6xl font-extrabold leading-tight max-w-3xl">Ring & Receipts</h1>
       <p class="text-xl md:text-2xl max-w-2xl">Your personal telecom, tech <strong>&</strong> gadget concierge—because waiting on hold is so <em>Season 1</em>.</p>
       <a href="#contact" class="bg-white text-indigo-700 font-semibold px-6 py-3 rounded-full shadow-lg hover:scale-105 transition-transform">Book a Free Consult</a>
-      <span class="italic text-sm opacity-80">Ihr persönlicher Tech- &amp; Telekom-Betreuer</span>
+      <span class="italic text-sm opacity-80">Ihr persönlicher Tech‑ &amp; Telekom‑Betreuer</span>
     </section>
 
     <!-- VALUE PROPS -->
@@ -66,8 +64,8 @@
       <h2 class="text-3xl font-bold text-center mb-10">How It Works</h2>
       <div class="max-w-4xl mx-auto grid gap-8 md:grid-cols-3">
         <div class="flex flex-col items-center text-center gap-2"><span class="text-5xl font-extrabold text-indigo-600">1</span><h3 class="font-semibold">We Chat</h3><p>Tell me your tech wish‑list, budget & pain points.</p></div>
-        <div class="flex flex-col items-center text-center gap-2"><span class="text-5xl font-extrabold text-indigo-600">2</span><h3 class="font-semibold">I Curate & Optimize</h3><p>Receive a personalized plan & gear lineup, purchased and configured for you.</p></div>
-        <div class="flex flex-col items-center text-center gap-2"><span class="text-5xl font-extrabold text-indigo-600">3</span><h3 class="font-semibold">You Relax</h3><p>One tidy invoice + ongoing concierge support—zero tech drama.</p></div>
+        <div class="flex flex-col items-center text-center gap-2"><span class="text-5xl font-extrabold text-indigo-600">2</span><h3 class="font-semibold">I Curate & Optimize</h3><p>Receive a personalized plan & gear lineup, purchased & configured for you.</p></div>
+        <div class="flex flex-col items-center text-center gap-2"><span class="text-5xl font-extrabold text-indigo-600">3</span><h3 class="font-semibold">You Relax</h3><p>One tidy invoice & ongoing concierge support—zero tech drama.</p></div>
       </div>
     </section>
 
@@ -84,10 +82,18 @@
     <!-- DISCLAIMER -->
     <section class="bg-white py-10 px-6 border-t">
       <div class="max-w-4xl mx-auto text-sm text-gray-600 space-y-3">
-        <p><strong>Ring & Receipts is an independent tech‑consulting firm.</strong> We advise and manage on your behalf. Carrier and hardware costs are passed through at cost; concierge fees cover expertise, sourcing, and support—not resale of service.</p>
+        <p><strong>Ring & Receipts is an independent tech‑consulting firm.</strong> We advise and manage on your behalf.  Carrier and hardware costs are passed through at cost; concierge fees cover expertise, sourcing, and support—not resale of service.</p>
       </div>
     </section>
 
     <!-- CTA -->
     <section id="contact" class="bg-indigo-600 text-white py-16 px-6 flex flex-col items-center gap-6 text-center">
-      <h2 class="text-3xl font-bold">Let’s make tech chores vanish.</h
+      <h2 class="text-3xl font-bold">Let’s make tech chores vanish.</h2>
+      <p>Schedule your complimentary consult and ditch the support drama.</p>
+      <a href="mailto:hello@ringandreceipts.cc" class="bg-white text-indigo-700 font-semibold px-8 py-3 rounded-full shadow-lg hover:scale-105 transition-transform">Email Me Now</a>
+    </section>
+
+    <!-- FOOTER -->
+    <footer class="text-center text-sm py-8 text-gray-500">© 2025 Ring & Receipts, LLC • All rights reserved</footer>
+  </body>
+</html>
